# parallel-graph-algorithms

./: README.md
python/: bench_py_parallel.py  bench_scaling.py  bench_seq.py  bfs.py  bfs_parallel_mp.py  components.py  graph.py  plot_comparsion.py  plot_py_parallel.py  plot_scaling.py  plot_seq.py
results/: python_mp_bfs.csv  python_seq.csv  python_strong_scaling.csv  rust_parallel_bfs.csv  rust_seq.csv  rust_strong_scaling.csv  rust_weak_scaling.csv
rust/graph_algorithms/: Cargo.toml
rust/graph_algorithms/src/: bench_parallel.rs  bfs.rs  bfs_parallel.rs  component.rs  graph.rs  lib.rs  main.rs
