[package]
name = "graph_algorithms"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rayon = "1.10"
plotters = "0.3"

[lib]
name = "graph_algorithms"
path = "src/lib.rs"

[[bin]]
name = "graph_algorithms"
path = "src/main.rs"

[[bin]]
name = "bench_seq"
path = "src/bin/bench_seq.rs"

[[bin]]
name = "bench_parallel"
path = "src/bin/bench_parallel.rs"

[[bin]]
name = "bench_scaling"
path = "src/bin/bench_scaling.rs"


[[bin]]
name = "visualize"
path = "src/bin/visualize.rs"